// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should not render if not open 1`] = `<DocumentFragment />`;

exports[`Modal should render a 3x large one 1`] = `
<div>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw jRkhhQ absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render a 4x large one 1`] = `
<div>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw jCpCzv absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render a large one 1`] = `
<div>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw jnoDfx absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render a medium one 1`] = `
<div>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw fWjEmW absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render a modal with content 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw cTRlJa absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      >
        This is the Modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with description 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw cTRlJa absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      >
        <div
          class="text-theme-neutral-700"
        >
          This is the Modal description
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with overlay 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw cTRlJa absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      >
        This is the Modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a small one 1`] = `
<div>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw wLhVq absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      />
    </div>
  </div>
</div>
`;

exports[`Modal should render a xlarge one 1`] = `
<div>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw Zauxd absolute top-0 left-0 right-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-10 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 "
      />
    </div>
  </div>
</div>
`;
